# classical_rng

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
.icc/: guard-diff-v2-rebuild.json  production-audit.yaml
cmake/: classical_rngConfig.cmake.in
docs/: README.md  api-reference.md  bit_distribution.md  deterministic-prng.md  example_applications.md  getting-started.md  guarantees.md  implementation_details.md  learning-guide.md  mathematical_principles.md  performance_analysis.md  portability.md  references.md  secure-randomness.md
examples/: constant_roundoff.c  dice.c  secure_token.c  shuffle.c
examples/crypto/: key_derivation.c  token_generation.c
examples/game/: particle_system.c  terrain_generation.c
include/: classical_rng.h
include/classical_rng/: common.h  crypto_rng.h  game_rng.h
src/common/: constants.h  status.c
src/crypto_rng/: crypto_rng.c  crypto_rng.h  crypto_rng_cli.c
src/game_rng/: game_rng.c  game_rng.h  game_rng_cli.c
tests/: test_classical_rng.c  test_cpp_header.cpp  test_crypto_rng.c  test_crypto_rng.h  test_game_rng.c  test_game_rng.h  test_v1_crypto_compat.c  test_v1_game_compat.c
tests/cmake_consumer/: CMakeLists.txt  main.c
tests/test_utils/: statistical_tests.c  statistical_tests.h
tests/visualization/: index.html  package-lock.json  package.json
tests/visualization/src/: App.jsx
tests/visualization/src/components/: TestVisualizer.jsx
tests/visualization/src/utils/: testParser.js
